# miden-tutorials

./: .gitignore  AGENTS.md  package.json
docs/: Cargo.toml
docs/src/: miden_node_setup.md
docs/src/rust-client/: counter_contract_tutorial.md  create_deploy_tutorial.md  creating_notes_in_masm_tutorial.md  custom_note_how_to.md  delegated_proving_tutorial.md  foreign_procedure_invocation_tutorial.md  mappings_in_masm_how_to.md  mint_consume_create_tutorial.md  network_transactions_tutorial.md  oracle_tutorial.md  public_account_interaction_tutorial.md  unauthenticated_note_how_to.md
docs/src/web-client/: counter_contract_tutorial.md  create_deploy_tutorial.md  creating_multiple_notes_tutorial.md  foreign_procedure_invocation_tutorial.md  mint_consume_create_tutorial.md  unauthenticated_note_how_to.md
masm/accounts/: count_reader.masm  counter.masm  mapping_example_contract.masm  oracle_reader.masm
masm/accounts/auth/: no_auth.masm
masm/notes/: hash_preimage_note.masm  iterative_output_note.masm  network_increment_note.masm
masm/scripts/: mapping_example_script.masm  oracle_reader_script.masm  reader_script.masm
rust-client/: Cargo.toml
scripts/: run_tutorials.sh
web-client/: package.json  playwright.config.ts
web-client/app/: page.tsx
web-client/lib/: createMintConsume.ts  foreignProcedureInvocation.ts  incrementCounterContract.ts  multiSendWithDelegatedProver.ts  unauthenticatedNoteTransfer.ts
web-client/tests/: tutorials.spec.ts
